--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -92,7 +92,9 @@ bCaptureMouseOnLaunch=True
 bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
 bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -101,9 +103,29 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="IA_Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Game/FirstPerson/Input/MobileControls.MobileControls
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
+
+[/Script/EnhancedInput.EnhancedInputDeveloperSettings]
++DefaultMappingContexts=(InputMappingContext=None,Priority=0)
+UserSettingsClass=/Script/EnhancedInput.EnhancedInputUserSettings
+DefaultPlayerMappableKeyProfileClass=/Script/EnhancedInput.EnhancedPlayerMappableKeyProfile
+DefaultWorldInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+bSendTriggeredEventsWhenInputIsFlushed=True
+bEnableUserSettings=False
+EnhancedInput.EnableDefaultMappingContexts=True
+EnhancedInput.OnlyTriggerLastActionInChord=True
+bLogOnDeprecatedConfigUsed=True
+bEnableWorldSubsystem=False
+EnhancedInput.bShouldLogAllWorldSubsystemInputs=False
+
+[/Script/EnhancedInput.InputTriggerPressed]
+ActuationThreshold=0.000000
+
+[/Script/EnhancedInput.InputTriggerReleased]
+ActuationThreshold=0.000000
 
